examples/test/testpolicy13253.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13253
  namespace: namespace131
spec:
  podSelector:
    matchLabels:
      key38: value0
      key31: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value8
      podSelector:
        matchLabels:
          key14: value29
          key13: value48
          key43: value8
